--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.0.3",
     "primeflex": "^3.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
